--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abhaya_libre</item>
         <item>@font/abril_fatface</item>
+        <item>@font/actor</item>
     </array>
 </resources>
