--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="70dp"
-        android:background="#FACB3D"
+        android:background="@drawable/main_button"
         android:fontFamily="@font/abhaya_libre"
         android:onClick="rupToPou"
         android:text="@string/rupee_to_pound"
@@ -30,7 +30,7 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="70dp"
-        android:background="#FACB3D"
+        android:background="@drawable/main_button"
         android:fontFamily="@font/abhaya_libre"
         android:onClick="dolToRup"
         android:text="@string/dollar_to_rupee"
@@ -46,7 +46,7 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="67dp"
         android:layout_marginEnd="70dp"
-        android:background="#FACB3D"
+        android:background="@drawable/main_button"
         android:fontFamily="@font/abhaya_libre"
         android:onClick="rupToDol"
         android:text="@string/rupee_to_dollar"
@@ -114,7 +114,7 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="70dp"
-        android:background="#FACB3D"
+        android:background="@drawable/main_button"
         android:fontFamily="@font/abhaya_libre"
         android:onClick="pouToRup"
         android:text="@string/pound_to_rupee"
