--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -3,12 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="@string/developers_contact"
-        android:icon="@drawable/ic_email"
-        app:showAsAction="ifRoom"/>
-
-    <item
-        android:title="@string/developers_contact"
         android:id="@+id/contact_us"
-        app:showAsAction="never"/>
-
+        android:icon="@drawable/ic_email"
+        app:showAsAction="always"/>
 </menu>
